# openelevationservice

./: .dockerignore  .gitignore  .travis.yml  CHANGELOG.md  Dockerfile  README.md  README.rst  docker-compose.yml  gunicorn_config.py  manage.py  ops_settings_docker.sample.yml  ops_settings_docker.yml  pyproject.toml  requirements.txt  setup.py
docs/: Makefile
docs/source/: conf.py  index.rst  openelevationservice.rst
geom/: heidelberg.geojson  sicily.geojson
joerd_docker/: Dockerfile
openelevationservice/: __init__.py
openelevationservice/server/: __init__.py  config.py  ops_settings.sample.yml  ops_settings.yml
openelevationservice/server/api/: __init__.py  api_exceptions.py  oes_post.yaml  querybuilder.py  response.py  validator.py  views.py
openelevationservice/server/db_import/: filestreams.py  import_data.py  models.py  raster_processing.py
openelevationservice/server/sources/: __init__.py  etopo1.py  gmted.py  gv_at.py  provider.py  srtm.py
openelevationservice/server/utils/: codec.py  convert.py  custom_func.py  logger.py
openelevationservice/tests/: __init__.py  base.py  test_api_line.py  test_api_point.py  test_codec.py  test_convert.py  test_elevation_line.py
sql/: 50_tiles.sql  50_tiles_longline.sql  extract2d.sql  extract2d_30km.sql  extract2d_850km.sql  extract2d_perpoint.sql  no_tiles.sql  out.txt
tiles/: tile.tiff
